# Lakibeam1_SDK

Config SDK/: LakiBeamHTTP.cpp  LakiBeamHTTP.h
Data SDK/: CMakeLists.txt  LakiBeamUDP.cpp  LakiBeamUDP.h  main.cpp  python_interface.cpp  python_interface.h
